--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "006caaad",
+   "id": "13427340",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c86ad826",
+   "id": "ff13d436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7fa2edc8",
+   "id": "a8ee0ab3",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc274186",
+   "id": "8948a617",
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +331,166 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "5a1906c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School ID      15\n",
+       "school_name    15\n",
+       "type           15\n",
+       "size           15\n",
+       "budget         15\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_data_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "136de8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID       39170\n",
+       "student_name     39170\n",
+       "gender           39170\n",
+       "grade            39170\n",
+       "school_name      39170\n",
+       "reading_score    39170\n",
+       "math_score       39170\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_data_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "33b9134d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID       0\n",
+       "student_name     0\n",
+       "gender           0\n",
+       "grade            0\n",
+       "school_name      0\n",
+       "reading_score    0\n",
+       "math_score       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_data_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "588ed11e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School ID       int64\n",
+       "school_name    object\n",
+       "type           object\n",
+       "size            int64\n",
+       "budget          int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_data_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b54c9b1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID        int64\n",
+       "student_name     object\n",
+       "gender           object\n",
+       "grade            object\n",
+       "school_name      object\n",
+       "reading_score     int64\n",
+       "math_score        int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_data_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c22c749b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-14-429b06436551>:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word, \"\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add each prefix and suffix to remove to a list.\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \",\"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]\n",
+    "for word in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word, \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8481f8da",
+   "id": "7d100b1c",
    "metadata": {},
    "outputs": [],
    "source": []
